--- a/Proyecto_SistemaVotos/Pages/ProductoDelete.razor
+++ b/Proyecto_SistemaVotos/Pages/ProductoDelete.razor
@@ -1,7 +1,7 @@
 ﻿@page "/ProductoDelete/{id:int}"
 
-@using Proyecto_SistemaVotos.Data.Model
-@using Proyecto_SistemaVotos.Data.Service
+@using Proyecto_TiendaOnline.Data.Model
+@using Proyecto_TiendaOnline.Data.Service
 
 @inject IProductoService IProductoService
 @inject NavigationManager NavigationManager
