--- a/Proyecto_SistemaVotos/_Imports.razor
+++ b/Proyecto_SistemaVotos/_Imports.razor
@@ -5,8 +5,8 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Proyecto_SistemaVotos
-@using Proyecto_SistemaVotos.Shared
+@using Proyecto_TiendaOnline
+@using Proyecto_TiendaOnline.Shared
 @using BlazorStrap;
 @using BlazorInputFile
 @using System.IO
