--- a/Proyecto_SistemaVotos/Pages/ListaProductos.razor
+++ b/Proyecto_SistemaVotos/Pages/ListaProductos.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Productos"
 
-@using Proyecto_SistemaVotos.Data.Model
-@using Proyecto_SistemaVotos.Data.Service
+@using Proyecto_TiendaOnline.Data.Model
+@using Proyecto_TiendaOnline.Data.Service
 @using System.IO
 @using System.Net.Mail;
     
