--- a/Proyecto_SistemaVotos/Pages/ProductoActualizar.razor
+++ b/Proyecto_SistemaVotos/Pages/ProductoActualizar.razor
@@ -1,8 +1,8 @@
 ﻿@page "/ProductoUpdate"
 @page "/ProductoUpdate/{id:int}"
 
-@using Proyecto_SistemaVotos.Data.Model
-@using Proyecto_SistemaVotos.Data.Service
+@using Proyecto_TiendaOnline.Data.Model
+@using Proyecto_TiendaOnline.Data.Service
 
 @inject IProductoService IProductoService
 @inject NavigationManager NavigationManager
