--- a/Proyecto_SistemaVotos/Pages/ProductoAdd.razor
+++ b/Proyecto_SistemaVotos/Pages/ProductoAdd.razor
@@ -1,7 +1,7 @@
 ﻿@page "/ProductoAdd"
 
-@using Proyecto_SistemaVotos.Data.Model
-@using Proyecto_SistemaVotos.Data.Service
+@using Proyecto_TiendaOnline.Data.Model
+@using Proyecto_TiendaOnline.Data.Service
 @using System.Net.Mail
 @using System.IO
 @inject IProductoService IProductoService
